# casalCiumento

./: .gitignore  BuscaBacktracking.cpp  BuscaIrrevogavel.cpp  BuscaLargura.cpp  BuscaProfundidade.cpp  CMakeLists.txt  README.md  main.cpp  manual.cpp  output.csv  performance.cpp
include/: AIAlgorithm.h  Boat.h  GTNode.h  GTree.h  Metrics.h  Person.h  Scenario.h
output/: astar_prune_0.dot  astar_prune_0_sol.dot  astar_prune_1.dot  astar_prune_1_sol.dot  backtracking.dot  backtracking_sol.dot  bfs_prune_0.dot  bfs_prune_0_sol.dot  bfs_prune_1.dot  bfs_prune_1_sol.dot  dfs_prune_0.dot  dfs_prune_0_sol.dot  dfs_prune_1.dot  dfs_prune_1_sol.dot  greedy_prune_0.dot  greedy_prune_0_sol.dot  greedy_prune_1.dot  greedy_prune_1_sol.dot  ordered_prune_0.dot  ordered_prune_0_sol.dot  ordered_prune_1.dot  ordered_prune_1_sol.dot
src/: AIAlgorithm.cc  AIAlgorithm.cpp  Boat.cc  GTNode.cc  GTree.cc  Person.cc  Scenario.cc
